Remove deprecations for JDK 17